<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/overlay"
    tools:context=".views.DashboardActivity">

<!--    <androidx.appcompat.widget.Toolbar-->

<!--        android:id="@+id/my_toolbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:elevation="4dp"-->
<!--        android:gravity="center"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16415869" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50121653" />

    <RelativeLayout
        android:layout_width="138dp"
        android:layout_height="132dp"
        android:background="@drawable/relt"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <ImageView
            android:id="@+id/es_session_imgt"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:padding="7dp"
            android:src="@drawable/es_session"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/es_session_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/es_session_imgt"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:text="@string/essesion"
            android:textColor="@color/black" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="138dp"
        android:layout_height="132dp"
        android:background="@drawable/relt"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <ImageView
            android:id="@+id/es_history_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:padding="7dp"
            android:src="@drawable/es_history" />

        <TextView
            android:id="@+id/es_history_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/es_history_img"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:text="@string/eshistory"
            android:textColor="@color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="138dp"
        android:layout_height="132dp"
        android:background="@drawable/relt"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline7">

        <ImageView
            android:id="@+id/kegel_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:padding="7dp"
            android:src="@drawable/kegel" />

        <TextView
            android:id="@+id/kegel_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/kegel_img"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/kegel"
            android:textColor="@color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="138dp"
        android:layout_height="132dp"
        android:background="@drawable/relt"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline7">

        <ImageView
            android:id="@+id/voiding_diary_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:padding="7dp"


            />

        <TextView
            android:id="@+id/voiding_diary_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/voiding_diary_img"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:text="@string/voiding_diary"
            android:textColor="@color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="138dp"
        android:layout_height="132dp"
        android:background="@drawable/relt"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline8">

        <ImageView
            android:id="@+id/pft_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:padding="7dp"
            android:src="@drawable/pft"

            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/pft_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pft_img"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/pft"
            android:textColor="@color/black"

            app:layout_constraintTop_toBottomOf="@+id/pft_img" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="138dp"
        android:layout_height="132dp"
        android:background="@drawable/relt"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline8">

        <ImageView
            android:id="@+id/sync_data_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:padding="7dp"
            android:src="@drawable/sync_data"

            />

        <TextView
            android:id="@+id/sync_data_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sync_data_img"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/syncdata"
            android:textColor="@color/black" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.41" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.86" />
</androidx.constraintlayout.widget.ConstraintLayout>