<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".views.StimulationControlScreen">



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="6dp" />

    <ImageButton
        android:id="@+id/back_arrow_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="64dp"
        android:layout_height="34dp"
        android:src="@drawable/ic_back_arrow"

        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:layout_marginBottom="5dp"
        android:text="@string/sel_elct"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.135" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="334dp"
        android:layout_height="215dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graph"
                android:layout_width="355dp"
                android:layout_height="215dp" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="326dp"
        android:layout_height="294dp"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_gravity="center"
            android:layout_weight="0.80"
            android:foregroundGravity="center"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/circle_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:foregroundGravity="center"
                android:gravity="center"></RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.20"
            android:padding="5dp"
            android:weightSum="3">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/play_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/play_arrow" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/pause_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/pause" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/stop_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/stop" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/bluetooth_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.28" />

    <TextView
        android:id="@+id/power_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/power_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/bluetooth_txt"
        app:layout_constraintVertical_bias="0.301" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="5dp" />
</androidx.constraintlayout.widget.ConstraintLayout>